Production ready update manager, no Mac support for now